--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@changesets/changelog-github": "^0.4.0",
     "@changesets/cli": "^2.16.0",
     "lerna": "^4.0.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
     "tsdx": "^0.14.1",
     "typescript": "^4.2.4"
   }
