Chore: correct module name

--- a/packages/module-template/package.json
+++ b/packages/module-template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "module-template",
+  "name": "@kks-web/module-template",
   "version": "0.0.0",
   "description": "🚀 A module start template.",
   "license": "MIT",
