Fix: correct project name

--- a/packages/module-template/package.json
+++ b/packages/module-template/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "🚀 A module start template.",
   "license": "MIT",
-  "author": "KKSWeb <web@kkstream.com.tw> (https://github.com/KKStream/doreamon)",
+  "author": "KKSWeb <web@kkstream.com.tw> (https://github.com/KKStream/doraemon)",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "module": "dist/fake-module.esm.js",
