--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,7 @@
   "$schema": "https://unpkg.com/@changesets/config@1.6.0/schema.json",
   "changelog": [
     "@changesets/changelog-github",
-    { "repo": "KKStream/doreamon" }
+    { "repo": "KKStream/doraemon" }
   ],
   "commit": false,
   "linked": [],
