--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "lerna run test --",
     "lint": "lerna run lint",
+    "build": "lerna run build",
     "prepublish": "lerna run prepublish",
     "release": "changeset publish",
     "prepare": "husky install"
