Chore: rename `prepare` command to `prepublish` for CI

--- a/packages/module-template/package.json
+++ b/packages/module-template/package.json
@@ -22,7 +22,7 @@
     "clean": "run-p clean:*",
     "clean:build": "rimraf dist",
     "clean:cov": "rimraf coverage",
-    "prepare": "tsdx build"
+    "prepublish": "tsdx build"
   },
   "dependencies": {
     "react": "^17.0.2",
