--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "lerna run test --",
     "lint": "lerna run lint",
     "build": "lerna run build",
+    "prepublish": "lerna run prepublish",
     "release": "changeset publish",
     "prepare": "husky install"
   },
