--- a/packages/module-template/package.json
+++ b/packages/module-template/package.json
@@ -22,7 +22,7 @@
     "clean": "run-p clean:*",
     "clean:build": "rimraf dist",
     "clean:cov": "rimraf coverage",
-    "prepare": "yarn build"
+    "prepublish": "npm run build"
   },
   "dependencies": {
     "react": "^17.0.2",
