--- a/packages/module-template/package.json
+++ b/packages/module-template/package.json
@@ -26,7 +26,8 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tslib": "^2.2.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.5",
