--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "lerna run test --",
     "lint": "lerna run lint",
     "build": "lerna run build",
+    "size": "lerna run size",
     "release": "changeset publish",
     "prepare": "husky install"
   },
@@ -17,11 +18,13 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.0",
     "@changesets/cli": "^2.16.0",
+    "@size-limit/preset-small-lib": "^4.10.2",
     "husky": "^6.0.0",
     "lerna": "^4.0.0",
     "lint-staged": "^11.0.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
+    "size-limit": "^4.10.2",
     "tsdx": "^0.14.1",
     "typescript": "^4.2.4"
   }
