--- a/packages/module-template/package.json
+++ b/packages/module-template/package.json
@@ -19,11 +19,23 @@
     "test": "tsdx test --passWithNoTests",
     "test:cov": "yarn test --coverage",
     "lint": "tsdx lint",
+    "size": "size-limit",
+    "size:analyze": "size-limit --why",
     "clean": "run-p clean:*",
     "clean:build": "rimraf dist",
     "clean:cov": "rimraf coverage",
     "prepublish": "npm run build"
   },
+  "size-limit": [
+    {
+      "path": "dist/module-template.cjs.production.min.js",
+      "limit": "10 KB"
+    },
+    {
+      "path": "dist/module-template.esm.js",
+      "limit": "10 KB"
+    }
+  ],
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
