Chore(package: add license, homepage, and repository fields

--- a/packages/module-template/package.json
+++ b/packages/module-template/package.json
@@ -2,6 +2,9 @@
   "name": "@kks-web/module-template",
   "version": "0.0.1",
   "description": "🚀 A module start template.",
+  "license": "MIT",
+  "homepage": "https://github.com/KKStream/doraemon/tree/master/packages/module-template",
+  "repository": "https://github.com/KKStream/doraemon/tree/master/packages/module-template",
   "author": "KKSWeb <web@kkstream.com.tw> (https://github.com/KKStream/doraemon)",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
