Chore(package: update homepage and author fields

--- a/packages/module-template/package.json
+++ b/packages/module-template/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "description": "🚀 A module start template.",
   "license": "MIT",
-  "homepage": "https://github.com/KKStream/doraemon/packages/module-template",
+  "homepage": "https://github.com/KKStream/doraemon",
   "repository": "https://github.com/KKStream/doraemon/packages/module-template",
-  "author": "KKSWeb <web@kkstream.com.tw> (https://github.com/KKStream/doraemon)",
+  "author": "KKSWeb <web@kkstream.com.tw>",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "module": "dist/fake-module.esm.js",
