Chore(module-template): refine size related commands

--- a/packages/module-template/package.json
+++ b/packages/module-template/package.json
@@ -21,8 +21,8 @@
     "test": "tsdx test --passWithNoTests",
     "test:cov": "yarn test --coverage",
     "lint": "tsdx lint",
-    "size": "size-limit",
-    "size:analyze": "size-limit --why",
+    "size": "yarn build && size-limit",
+    "size:analyze": "yarn size --why",
     "clean": "run-p clean:*",
     "clean:build": "rimraf dist",
     "clean:cov": "rimraf coverage",
