--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,12 @@
-.changeset
-**/*/.cache
-**/*/dist
+# testing
+packages/eslint-config-kksweb/test
+coverage
+
+# development
+.cache
+
+# production
+dist
+
+# misc
+*.log
