--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   ],
   "scripts": {
     "test": "lerna run test --",
-    "lint": "lerna run lint",
+    "lint": "lerna run lint --",
     "build": "lerna run build",
     "format": "prettier -w -u .",
     "release": "changeset publish",
