--- a/package.json
+++ b/package.json
@@ -13,15 +13,13 @@
     "prepare": "husky install"
   },
   "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": "tsdx lint",
     "**/*": "prettier -w -u"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.0",
     "@changesets/cli": "^2.16.0",
-    "@kks-web/eslint-config-kksweb": "^0.0.1",
     "@size-limit/preset-small-lib": "^4.10.2",
-    "eslint": "^7.2.0",
-    "eslint-plugin-jest": "^24.3.6",
     "husky": "^6.0.0",
     "lerna": "^4.0.0",
     "lint-staged": "^11.0.0",
