--- a/packages/module-template/package.json
+++ b/packages/module-template/package.json
@@ -49,8 +49,7 @@
     "@testing-library/react-hooks": "^5.1.2",
     "@testing-library/user-event": "^13.1.9",
     "@types/react": "^17.0.5",
-    "@types/react-dom": "^17.0.3",
-    "husky": "^6.0.0"
+    "@types/react-dom": "^17.0.3"
   },
   "peerDependencies": {
     "react": ">=17"
