--- a/packages/virtual-cast/package.json
+++ b/packages/virtual-cast/package.json
@@ -21,7 +21,7 @@
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests",
     "test:cov": "yarn test --coverage",
-    "lint": "tsdx lint",
+    "lint": "tsdx lint --fix",
     "size": "size-limit",
     "size:analyze": "size-limit --why",
     "clean": "run-p clean:*",
@@ -41,9 +41,21 @@
     "tslib": "^2.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/react-hooks": "^5.1.2",
+    "@testing-library/user-event": "^13.1.9",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.3",
-    "husky": "^6.0.0"
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-flowtype": "^3.13.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.2.0"
   },
   "peerDependencies": {
     "react": ">=17"
@@ -51,9 +63,5 @@
   "prettier": {
     "arrowParens": "avoid",
     "trailingComma": "none"
-  },
-  "eslintConfig": {
-    "extends": [],
-    "rules": {}
   }
 }
