--- a/packages/eslint-config-kksweb/package.json
+++ b/packages/eslint-config-kksweb/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-jest-dom": "^3.9.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4",
     "eslint-plugin-testing-library": "^4.6.0",
